Corrected reset import.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,5 +1,5 @@
 /* ------ Import CSS reset ------------------------------ */
-@import url("/stylesheets/reset.css");
+@import url("reset.css");
 
 /* ------ Colors ---------------------------------------- */
 /*
