--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= stylesheet_link_tag 'print', :media => "print" %>
   <%= javascript_include_tag 'jquery-1.3.2.min', 'application', :cache => true -%>
   <%= yield(:head) -%>
-  <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/ico" href="<%=app_root%>/favicon.ico" />
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <%= tab_for :contacts, contacts_path, "Contacts" %>
         <%= tab_for :users, users_path, "Users" %>
         <% if @current_user.admin? -%>
-          <%= tab_for :admin, '/admin', "Admin" %>
+          <%= tab_for :admin, admin_index_path, "Admin" %>
         <% end -%>
       </ul>
     </div><!-- end nav -->
@@ -56,6 +56,7 @@
         <p>
           <label for="jump_id"><em>Enter a ticket number:</em></label><br/>
           <input type="text" id="jump_id" size="8" class="textfield"/>
+          <input type="hidden" id="app_root" value="<%=app_root%>"/>
           <button class="button">Go</button>
         </p>
       </form>
