--- a/app/views/notifier/owner_alert.text.html.erb
+++ b/app/views/notifier/owner_alert.text.html.erb
@@ -3,16 +3,14 @@
 <html>
 <head><meta http-equiv="content-type" content="text/html;charset=UTF-8" /></head>
 <body>
-<h1>TicketMule Owner Alert</h1>
 
-<p>
-You are receiving this alert because you have been assigned to ticket #<%= @ticket.id -%>.
-</p>
+<h2>TicketMule Owner Alert</h2>
 
-<p>
-View the ticket at the link below:<br/>
-<%= ticket_url @ticket -%>
-</p>
+<p>You are receiving this alert because you have been assigned to ticket #<%= @ticket.id -%>.</p>
+
+<p>View the ticket at the link below:</p>
+
+<p><%= ticket_url @ticket -%></p>
 
 </body>
 </html>
