Minified datepicker.js with yuicompressor-2.4.2

--- a/app/views/tickets/_ticket_filter.html.erb
+++ b/app/views/tickets/_ticket_filter.html.erb
@@ -50,7 +50,7 @@
 </div>
 
 <% content_for :head do -%>
-  <%= javascript_include_tag 'datepicker' -%>
+  <%= javascript_include_tag 'datepicker.min' -%>
   <script type="text/javascript">
     $(function() {
     $('#filter-start').DatePicker({
