Updated jQuery to release 1.4

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <title><%= controller.controller_name.capitalize %> &#8250; TicketMule</title>
   <%= stylesheet_link_tag 'screen', :media => "screen, projection" %>
   <%= stylesheet_link_tag 'print', :media => "print" %>
-  <%= javascript_include_tag 'jquery-1.3.2.min', 'application', :cache => true -%>
+  <%= javascript_include_tag 'jquery.min', 'application', :cache => true -%>
   <%= yield(:head) -%>
   <link rel="shortcut icon" type="image/ico" href="<%=app_root%>/favicon.ico" />
 </head>
