Removed XHTML and CSS validation links from application footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
 <br/><br/></div><!-- end content -->
 
 <div id="footer">
-  <p><a href="http://validator.w3.org/check/referer" title="Valid XHTML">XHTML</a>&nbsp;|&nbsp;<a href="http://jigsaw.w3.org/css-validator/check/referer" title="Valid CSS">CSS</a>&nbsp;|&nbsp;Powered by <strong><a href="/">TicketMule</a></strong></p>
+  <p>Powered by <strong><a href="http://www.appogee.net/">TicketMule</a></strong></p>
 </div>
 
 </body>
