--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -197,6 +197,8 @@ form a:hover { color: #90af4c; }
 .profile a:link, .profile a:visited { color: #4d88cf; }
 .profile a:hover { color: #90af4c; }
 
+.profile-avatar { -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; border-top: 1px solid #f3f3f3; border-bottom: 1px solid #d0d0d0; border-left: 1px solid #f0f0f0; border-right: 1px solid #e7e7e7; padding: 2px; margin: 0 5px 0 0; }
+
 #attachment-list, #comment-list, #alert-list { margin: 3px 0 16px 0; overflow: hidden; }
 #attachment-list li, #alert-list li { padding: 4px 0; margin: 0; display: block; }
 #attachment-list li span, #alert-list li span { display: none; margin: 0; padding: 0; }
