--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -178,6 +178,7 @@ form a:hover { color: #90af4c; }
 #controls .delete { background: transparent url('../images/delete.png') no-repeat 0 1px; }
 #controls .disable { background: transparent url('../images/disable.png') no-repeat 0 1px; }
 #controls .enable { background: transparent url('../images/accept.png') no-repeat 0 1px; }
+#controls .unlock { background: transparent url('../images/unlock.png') no-repeat 0 1px; }
 #controls .back { background: transparent url('../images/back-arrow.png') no-repeat 0 1px; }
 
 #tickets_per_page span { font-weight: normal; margin: 0; padding: 0; }
@@ -305,6 +306,6 @@ td.datepickerSpecial.datepickerSelected a { background: #a00; }
 .pagination span.disabled { border: 1px solid #ccc; color: #ccc; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 
 #footer { position: relative; margin-top: -32px; height: 32px; width: 100%; text-align: center; background: #e6e6dc url('../images/shadow-trans.png') repeat-x top left; }
-#footer p { padding: 8px 8px 0 8px; margin: 0; color: #777; }
+#footer p { padding: 8px 8px 0 8px; margin: 0; color: #777; text-shadow: 0 1px 0 #fff; }
 #footer a { color: #777; text-decoration: none; }
 #footer a:hover { color: #90af4c; text-decoration: underline; }
