--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -92,7 +92,7 @@ form { margin: 0 0 5px 0; }
 .textfield, .textarea, .selectbox, #jumpbox .textfield { padding: 4px; background: #fff; border: 1px solid #ccc; font: 12px Verdana,sans-serif; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 .textfield:hover, .textarea:hover, .selectbox:hover { border: 1px solid #999; }
 .textfield:focus, .textarea:focus, .selectbox:focus { border: 1px solid #4d88cf; }
-.textarea { width: 440px; }
+.textarea { width: 440px; overflow: auto; }
 form a:link, form a:visited { color: #4d88cf; }
 form a:hover { color: #90af4c; }
 #jumpbox .textfield { border: 2px solid #aaa; }
