--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,11 @@
 <head>  
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <meta name="description" content="TicketMule support ticket tracking" />
-  <title><%= controller.controller_name.capitalize %> &#8250; TicketMule</title>
+  <title><%= controller.controller_name.capitalize %> &#8250; <%=t 'ticketmule' -%></title>
   <%= stylesheet_link_tag 'screen', :media => "screen, projection" %>
   <%= stylesheet_link_tag 'print', :media => "print" %>
   <%= javascript_include_tag 'jquery.min', 'application', :cache => true -%>
-  <%= yield(:head) -%>
+  <%= yield :head -%>
   <link rel="shortcut icon" type="image/ico" href="<%=app_root%>/favicon.ico" />
 </head>
 
@@ -17,8 +17,8 @@
 
 <div id="header">
   <div id="inner-header">
-    <h1>TicketMule</h1>
-    <p id="status">Signed in as <%= link_to @current_user.username, user_path(@current_user.id) -%>&nbsp;&nbsp;|&nbsp;&nbsp;<%= link_to "Logout", logout_path, :method => :delete, :confirm => "Are you sure you want to logout?" %></p>
+    <h1><%=t 'ticketmule' -%></h1>
+    <p id="status"><%=t 'signed_in_as' -%>&nbsp;<%= link_to @current_user.username, user_path(@current_user.id) -%>&nbsp;&nbsp;|&nbsp;&nbsp;<%= link_to t(:sign_out), logout_path, :method => :delete, :confirm => t('confirm_sign_out') -%></p>
     <div id="nav">
       <!--
       <ul id="nav-left">
@@ -27,12 +27,12 @@
       </ul>
       -->
       <ul id="nav-right">
-        <%= tab_for :dashboard, dashboard_index_path, "Dashboard" %>
-        <%= tab_for :tickets, tickets_path, "Tickets" %>
-        <%= tab_for :contacts, contacts_path, "Contacts" %>
-        <%= tab_for :users, users_path, "Users" %>
+        <%= tab_for :dashboard, dashboard_index_path, t('menu.dashboard') %>
+        <%= tab_for :tickets, tickets_path, t('menu.tickets') %>
+        <%= tab_for :contacts, contacts_path, t('menu.contacts') %>
+        <%= tab_for :users, users_path, t('menu.users') %>
         <% if @current_user.admin? -%>
-          <%= tab_for :admin, admin_index_path, "Admin" %>
+          <%= tab_for :admin, admin_index_path, t('menu.admin') %>
         <% end -%>
       </ul>
     </div><!-- end nav -->
@@ -50,14 +50,14 @@
   </div><!-- end left-column -->
   <div id="right-column">
     <%= yield :button_list -%>
-    <h3>Jump to Ticket</h3>
+    <h3><%=t 'jump_to_ticket' -%></h3>
     <div class="right-container">
       <form id="jumpbox" action="">
         <p>
-          <label for="jump_id"><em>Enter a ticket number:</em></label><br/>
+        <label for="jump_id"><em><%=t 'enter_ticket_no' -%></em></label><br/>
           <input type="text" id="jump_id" size="8" class="textfield"/>
           <input type="hidden" id="app_root" value="<%=app_root%>"/>
-          <button class="button">Go</button>
+          <button class="button"><%=t 'go' -%></button>
         </p>
       </form>
     </div>
@@ -68,7 +68,7 @@
 <br/><br/></div><!-- end content -->
 
 <div id="footer">
-  <p>Powered by <strong><a href="http://www.appogee.net/">TicketMule</a></strong></p>
+  <p><%=t 'powered_by' -%>&nbsp;<strong><a href="http://www.appogee.net/">TicketMule</a></strong></p>
 </div>
 
 </body>
