Added translations to sign in and password reset pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
         <label for="jump_id"><em><%=t 'enter_ticket_no' -%></em></label><br/>
           <input type="text" id="jump_id" size="8" class="textfield"/>
           <input type="hidden" id="app_root" value="<%=app_root%>"/>
-          <button class="button"><%=t 'go' -%></button>
+          <button class="button"><%=t 'button.go' -%></button>
         </p>
       </form>
     </div>
