--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,16 +1,16 @@
 <div id="wide-content">
-  <h1>Change My Password</h1>
+  <h1><%=t 'change_my_password' -%></h1>
   <div class="box">
     <% form_for @user, :url => password_reset_path, :method => :put do |f| %>
       <%= f.error_messages %>
       <dl>
-        <dt><label for="password">Password</label></dt>
+        <dt><label for="password"><%=t 'password' -%></label></dt>
         <dd><%= f.password_field :password, :class => "textfield", :size => "20" %></dd>
 
-        <dt><label for="password_confirmation">Confirm Password</label></dt>
+        <dt><label for="password_confirmation"><%=t 'confirm_password' -%></label></dt>
         <dd><%= f.password_field :password_confirmation, :class => "textfield", :style => "20" %></dd>
 
-        <dd><%= f.submit "Update", :class => "button" %></dd>
+        <dd><%= f.submit t('button.update'), :class => "button" %></dd>
       </dl>
     <% end %>
   </div>
