--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,14 +1,14 @@
 <div id="login-content">
-  <h1>Reset Password</h1>
+  <h1><%=t 'reset_password' -%></h1>
   <div class="box">
     <%= show_flash %>
-    <p>Enter your email address below and instructions to reset your password will be emailed to you.</p>
+    <p><%=t 'reset_instructions' -%></p>
     <% form_tag password_resets_path do %>
       <dl>
-        <dt><label for="email">Email</label></dt>
+        <dt><label for="email"><%=t 'email' -%></label></dt>
         <dd><%= text_field_tag :email, {}, { :size => 20, :class => "textfield" } -%></dd>
 
-        <dd><%= submit_tag "Submit", :class => "button" %>&nbsp;&nbsp;<%= link_to "Cancel", login_path %></dd>
+        <dd><%= submit_tag t('button.submit'), :class => "button" %>&nbsp;&nbsp;<%= link_to t('cancel'), login_path %></dd>
       </dl>
     <% end %>
   </div>
